# paper-eradiate-v100

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  download.py  download.sh  environment.yml  pyproject.toml
data/bsdf/: lambertian_disney_2011.nc
notebooks/: algeria_5.ipynb  canopies.ipynb  dakar.ipynb  dhp.ipynb  hyperspectral_radiance_toa.ipynb  irradiance_aod.ipynb  irradiance_aot.ipynb  plot.py  reflectance.ipynb  spherical_vs_plane_parallel.ipynb  sunphotometer.ipynb
notebooks/01-hyperspectral_radiance_toa/: hyperspectral_radiance_toa.ipynb
notebooks/02-sunphotometer/: sunphotometer.ipynb
notebooks/03-spherical_vs_plane_parallel/: spherical_vs_plane_parallel.ipynb
notebooks/04-reflectance/: reflectance.ipynb
notebooks/05-irradiance_aot/: irradiance_aot.ipynb
notebooks/06-canopies/: canopies.ipynb
notebooks/07-algeria_5/: algeria_5.ipynb
notebooks/08-dakar/: dakar.ipynb
notebooks/data/: HAMSTER_spectral_albedo_Gobabeb_015.txt
notebooks/dhp/: dhp.ipynb
src/paper_eradiate_v100/: plot.py
