[project]
authors = [{ name = "Vincent Leroy", email = "vincent.leroy@rayference.eu" }]
dependencies = [
  "eradiate[kernel]==0.31.0rc3",
  "ipykernel",
  "ipywidgets",
  "seaborn",
  "jupyterlab",
]
name = "paper-eradiate-v100"
requires-python = ">= 3.10"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64"]

[tool.pixi.pypi-dependencies]

[tool.pixi.feature.py310]
dependencies = { python = "3.10.*" }

[tool.pixi.environments.default]
features = ["py310"]

[tool.pixi.tasks]
