[project]
dependencies = [
  "eradiate[kernel]==0.31.1.dev0",
  "dreams-scenes@git+ssh://git@github.com/rayference/dreams-scenes@v0.1.0",
  "ipykernel",
  "ipywidgets",
  "seaborn",
  "jupyterlab",
  "jupyter-resource-usage",
  "jupyterlab-execute-time",
]
name = "paper-eradiate-v100"
requires-python = ">= 3.10,<3.13"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64"]

[tool.pixi.feature.py310]
dependencies = { python = "3.10.*" }

[tool.pixi.environments.default]
features = ["py310"]

[tool.pixi.tasks]
download = "python download.py"
